add css for head-section and section-1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="head-section">
             <div class="top-left">
-             <p>Header Logo</p>
+             <p class="t1">Header Logo</p>
             </div>
 
             <div class="top-right">
@@ -25,7 +25,7 @@
     <section class="section-1">
         <div class="below-header">
             <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <p class="t2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button class="first-btn">Sign Up</button>
         </div>
 
